--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ackbee</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/55d0223fcd.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
         <script
@@ -15,7 +15,7 @@
 </head>
 <body>
         <div class="header">
-                <h1 class="header-title">Ackbee</h1>
+                <a href="/"><h1 class="header-title">Ackbee</h1></a>
                 <div class="bag-menu">
                         <i class="fa-solid fa-bag-shopping"></i>
                         <i class="fa-solid fa-bars"></i>
@@ -26,7 +26,7 @@
                 </div>
         </div>
         <div class="slides"></div>
-        <a href="bags.html">
+        <a href="/bags">
                 <div class="bags-section">
                         <div class="section-header">
                                 <h2>Bags</h2>
@@ -34,7 +34,7 @@
                         </div>
                 </div>
         </a>
-        <a href="cups.html">
+        <a href="/cups">
                 <div class="cups-section">
                         <div class="section-header">
                                 <h2>Cups</h2>
