--- a/views/bags.ejs
+++ b/views/bags.ejs
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bags Catalog</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/55d0223fcd.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
         <script
@@ -14,8 +14,9 @@
         crossorigin="anonymous"></script>
 </head>
 <body>
+        
         <div class="header">
-                <h1 class="header-title">Ackbee</h1>
+                <a href="/"><h1 class="header-title">Ackbee</h1></a>
                 <div class="bag-menu">
                         <i class="fa-solid fa-bag-shopping"></i>
                         <i class="fa-solid fa-bars"></i>
@@ -44,29 +45,25 @@
                         </div>
 
                 </div>
-                <p class="products-count">0</p>
+                <p class="products-count"><%= data.products.length %></p>
         </div>
         <div class="catalog">
-                <div class="product">
+                <% data.products.forEach(element => { %>
+                        <div class="product">
                         <div class="product-img">
-                                <img src="images/cub.PNG" alt="">
+                                <img src="images/<%= element.image %>" alt="">
+                                </div>
+                                <div class="product-info">
+                                        <p class="product-name"><%= element.product_name %></p>
+                                        <p class="product-details">Brown Kraft Twisted Handle Shopping Bag <%= element.dimensions %> <%= element.per_case %></p>
+                                        <p class="product-price"><%= element.price %></p>
+                                        <div class="colors">
+                                                <span class="color1"></span>
+                                                <span class="color2"></span>
+                                        </div>
+                                </div>
                         </div>
-                        <div class="product-info">
-                                <p class="product-name">Cub</p>
-                                <p class="product-details">Brown Kraft Twisted Handle Shopping Bag 10”x 5”x 10” (250/case)</p>
-                                <p class="product-price">45.00</p>
-                        </div>
-                </div>
-                <div class="product">
-                        <div class="product-img">
-                                <img src="images/cub.PNG" alt="">
-                        </div>
-                        <div class="product-info">
-                                <p class="product-name">Cub</p>
-                                <p class="product-details">Brown Kraft Twisted Handle Shopping Bag 10”x 5”x 10” (250/case)</p>
-                                <p class="product-price">45.00</p>
-                        </div>
-                </div>
+                <% }); %>
         </div>
         <div class="footer">
                 <div class="footer-items">
@@ -80,5 +77,7 @@
                         </ul>
                 </div>
         </div>
+        <script>
+        </script>
 </body>
 </html>
