--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,12 @@
         <div class="header">
                 <a href="/"><h1 class="header-title">Ackbee</h1></a>
                 <div class="bag-menu">
-                        <i class="fa-solid fa-bag-shopping"></i>
+                        <div class="cart">
+                                <a href="/cart">
+                                        <i class="fa-solid fa-bag-shopping"></i>
+                                        <span class="cart-size">0</span>
+                                </a>
+                        </div>
                         <i class="fa-solid fa-bars"></i>
                 </div>
                 <div class="search">
