--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -48,7 +48,7 @@
                                 <br>
                                 <div class="cart-quan-selector-container quan">
                                         <label for="">Qty*</label>
-                                        <div class="product-quantity-selector cart-quan-selector">
+                                        <div class="cart-quan-selector">
                                                 <input type="number" name="product-quantity-cart" id="product-quantity-cart" placeholder="0">
                                                 <div class="quan-select-arrows">
                                                    <i class="fa-solid fa-angle-up add-quan"></i>
@@ -56,7 +56,6 @@
                                                 </div>
                                         </div>   
                                 </div>
-                                <br>
                                 <div class="edit-cart-options">
                                         <p class="edit-cart">Edit</p>
                                         <p class="rm-cart">Remove</p>
@@ -79,7 +78,9 @@
                                 <p>Total</p>
                                 <p class="total"></p>
                         </div>
-                        <div class="place-order">Place Order</div>
+                        <div class="check-out">
+                                <p>Check Out</p>
+                        </div>
                 </div>
         </div>
         <div class="footer">
