--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
                         <div class="cart">
                                 <a href="/cart">
                                         <i class="fa-solid fa-bag-shopping"></i>
-                                        <span class="cart-size">0</span>
+                                        <span class="cart-size"><%= data.cartSize %></span>
                                 </a>
                         </div>
                         <i class="fa-solid fa-bars"></i>
