--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,10 +8,10 @@
 /* ------- START HEAD & FOOT ------- */
 
 .header {
-        width: inherit;
+        width: 100%;
         background-color: #000;
         height: 18vh;
-        position: relative;
+        /* position: fixed; */
 }
 
 a {
@@ -256,11 +256,11 @@ a {
         font-size: .9rem;
 }
 
-.color1 {
+.brown-color {
         background-color: #8C724C;
 }
 
-.color1, .color2 {
+.brown-color, .white-color {
         display: inline-block;
 }
 
@@ -268,6 +268,10 @@ a {
 
 
 /* ------- START PRODUCT PAGE ------- */
+
+/* .product-info {
+        background-color: red;
+} */
 
 .title, .quan{
         padding-bottom: 1rem;
@@ -459,7 +463,7 @@ a {
         font-size: 1rem;
 }
 
-.product-info {
+.product-info-cart {
         width: 90%;
 }
 .rm-cart {
